--- a/config.toml
+++ b/config.toml
@@ -24,13 +24,16 @@ enableRobotsTXT = true
 
 [params]
   text_color = ""
-  author = ""
+  author = "eawind"
   favicon = "favicon.ico"
   site_logo = ""
   description = "The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-gray"
   recent_posts_number = 3
+  body_classes = "system-sans-serif bg-light-gray"
+  post_content_classes = "system-sans-serif"
+  date_format = "2006/1/2 15:04:05"
 
 [[params.ananke_socials]]
 name = "twitter"
